// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test for App Test Rendering 1`] = `null`;

exports[`test for ChosenHabit Test Rendering 1`] = `<chosenHabit />`;

exports[`test for Footer Test Rendering 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#9CBFDF",
      "elevation": 5,
      "flex": 2,
      "justifyContent": "center",
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 3.84,
      "width": "100%",
      "zIndex": 5,
    }
  }
>
  <Text />
</View>
`;

exports[`test for Header Test Rendering 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#9CBFDF",
      "elevation": 5,
      "flex": 3,
      "flexDirection": "row",
      "flexWrap": "wrap",
      "justifyContent": "flex-start",
      "paddingBottom": 10,
      "paddingTop": undefined,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 3.84,
      "width": "100%",
      "zIndex": 5,
    }
  }
>
  <Image
    source={1}
    style={
      Object {
        "height": 35,
        "marginLeft": 36,
        "marginTop": 100,
        "width": 35,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "#463C33",
        "fontFamily": "Shrikhand",
        "fontSize": 30,
        "left": "90%",
        "marginTop": 10,
        "position": "relative",
      }
    }
  >
    Repeat
  </Text>
</View>
`;
